@@ -93,14 +93,14 @@ public class GoOapiCodegenGenerator extends org.openapitools.codegen.languages.G
                     LOGGER.warn("Error reading allowable values for enum {}, incorrect type", model.getName());
                     return;
                 }
-                
+
                 for (HashMap<String, String> enumVar : enumVars) {
                     // Switch to PascalCase
                     String name = enumVar.get("name");
                     name = StringUtils.replace(name, "_", " ");
                     name = StringUtils.lowerCase(name);
                     String[] nameparts = name.split(" ");
-                    
+
                     // Prefix with type
                     name = model.getName();
                     for (String namePart : nameparts) {
@@ -195,8 +195,8 @@ public class GoOapiCodegenGenerator extends org.openapitools.codegen.languages.G
   }
 
   private void fixModelFreeform(Schema model) {
-    if (ModelUtils.isDisallowAdditionalPropertiesIfNotPresent() && ModelUtils.isFreeFormObject(openAPI, model)) {
-      Schema addlProps = ModelUtils.getAdditionalProperties(openAPI, model);
+    if (ModelUtils.isDisallowAdditionalPropertiesIfNotPresent() && ModelUtils.isFreeFormObject( model)) {
+      Schema addlProps = ModelUtils.getAdditionalProperties(model);
       if (addlProps == null) {
           Map<String, Object> exts = model.getExtensions();
           if(exts == null) {
@@ -245,7 +245,7 @@ public class GoOapiCodegenGenerator extends org.openapitools.codegen.languages.G
           }
           return "[]" + typDecl;
       } else if (ModelUtils.isMapSchema(p)) {
-          Schema inner = getAdditionalProperties(p);
+          Schema inner = ModelUtils.getAdditionalProperties(p);
           return getSchemaType(p) + "[string]" + getTypeDeclaration(unaliasSchema(inner, Collections.emptyMap()));
       }
       //return super.getTypeDeclaration(p);
@@ -276,8 +276,11 @@ public class GoOapiCodegenGenerator extends org.openapitools.codegen.languages.G
 
       return toModelName(openAPIType);
   }
-
   @Override
+  public Schema unaliasSchema(Schema schema) {
+        return unaliasSchema(schema, Collections.emptyMap());
+  }
+
   public Schema unaliasSchema(Schema schema, Map<String, String> importMappings) {
       Map<String, Schema> allSchemas = ModelUtils.getSchemas(openAPI);
         if (allSchemas == null || allSchemas.isEmpty()) {
@@ -300,7 +303,7 @@ public class GoOapiCodegenGenerator extends org.openapitools.codegen.languages.G
                     return schema; // generate a model extending array
                 } else {
                     return unaliasSchema(allSchemas.get(ModelUtils.getSimpleRef(schema.get$ref())),
-                            importMappings);
+                    importMappings);
                 }
             } else if (ModelUtils.isComposedSchema(ref)) {
                 return schema;
@@ -313,11 +316,11 @@ public class GoOapiCodegenGenerator extends org.openapitools.codegen.languages.G
                     } else {
                         // treat it as a typical map
                         return unaliasSchema(allSchemas.get(ModelUtils.getSimpleRef(schema.get$ref())),
-                                importMappings);
+                        importMappings);
                     }
                 }
             } else if (ModelUtils.isObjectSchema(ref)) { // model
-                if ((ref.getProperties() != null && !ref.getProperties().isEmpty()) || ModelUtils.isDisallowAdditionalPropertiesIfNotPresent() || new Boolean(false).equals(ref.getAdditionalProperties())) { // has at least one property
+                if ((ref.getProperties() != null && !ref.getProperties().isEmpty()) || ModelUtils.isDisallowAdditionalPropertiesIfNotPresent() || Boolean.valueOf(false).equals(ref.getAdditionalProperties())) { // has at least one property
                   if (ModelUtils.hasSelfReference(openAPI, ref)) {
                         // it's self referencing so returning itself instead
                         return schema;
@@ -328,7 +331,7 @@ public class GoOapiCodegenGenerator extends org.openapitools.codegen.languages.G
                     }
                 } else { // free form object (type: object)
                     return unaliasSchema(allSchemas.get(ModelUtils.getSimpleRef(schema.get$ref())),
-                            importMappings);
+                    importMappings);
                 }
             } else {
                 return unaliasSchema(allSchemas.get(ModelUtils.getSimpleRef(schema.get$ref())), importMappings);
@@ -498,8 +501,8 @@ public class GoOapiCodegenGenerator extends org.openapitools.codegen.languages.G
     return "object";
   }
 
-  @Override
-  protected boolean isFreeFormObject(Schema schema) {
+  // allows schema to be null
+  public static boolean isFreeFormObject(Schema schema) {
     if (schema == null) {
         return false;
     }
@@ -517,7 +520,7 @@ public class GoOapiCodegenGenerator extends org.openapitools.codegen.languages.G
     if ("object".equals(schema.getType())) {
         // no properties
         if ((schema.getProperties() == null || schema.getProperties().isEmpty())) {
-            Schema addlProps = ModelUtils.getAdditionalProperties(openAPI, schema);
+            Schema addlProps = ModelUtils.getAdditionalProperties(schema);
 
             if (schema.getExtensions() != null && schema.getExtensions().containsKey("x-is-free-form")) {
                 // User has hard-coded vendor extension to handle free-form evaluation.
